--- a/npm-audit.html
+++ b/npm-audit.html
@@ -55,7 +55,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">
-                            July 22nd 2020, 2:42:16 am
+                            September 21st 2020, 2:29:20 pm
                         </h5>
                         <p class="card-text">Last updated</p>
                     </div>
