feat: add support for validating env variables
Now the Env module allows validating environment variables and
also extracts the types from the validation rules for better
intellisense

Closes #15

--- a/npm-audit.html
+++ b/npm-audit.html
@@ -47,7 +47,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">
-                            11
+                            12
                         </h5>
                         <p class="card-text">Dependencies</p>
                     </div>
@@ -55,7 +55,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">
-                            September 21st 2020, 2:29:20 pm
+                            September 22nd 2020, 8:26:56 am
                         </h5>
                         <p class="card-text">Last updated</p>
                     </div>
