--- a/npm-audit.html
+++ b/npm-audit.html
@@ -55,7 +55,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">
-                            September 22nd 2020, 8:46:35 am
+                            September 23rd 2020, 9:05:22 am
                         </h5>
                         <p class="card-text">Last updated</p>
                     </div>
