--- a/npm-audit.html
+++ b/npm-audit.html
@@ -55,7 +55,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">
-                            September 23rd 2020, 9:16:18 am
+                            September 25th 2020, 2:41:47 pm
                         </h5>
                         <p class="card-text">Last updated</p>
                     </div>
