--- a/npm-audit.html
+++ b/npm-audit.html
@@ -55,7 +55,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">
-                            October 13th 2020, 9:48:29 am
+                            October 14th 2020, 12:28:22 pm
                         </h5>
                         <p class="card-text">Last updated</p>
                     </div>
