--- a/npm-audit.html
+++ b/npm-audit.html
@@ -55,7 +55,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">
-                            October 14th 2020, 1:41:21 pm
+                            October 20th 2020, 9:09:47 am
                         </h5>
                         <p class="card-text">Last updated</p>
                     </div>
