chore: update dependencies

--- a/npm-audit.html
+++ b/npm-audit.html
@@ -47,7 +47,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">
-                            12
+                            50
                         </h5>
                         <p class="card-text">Dependencies</p>
                     </div>
@@ -55,7 +55,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">
-                            December 2nd 2020, 11:24:14 am
+                            February 8th 2021, 10:18:38 am
                         </h5>
                         <p class="card-text">Last updated</p>
                     </div>
